header done with two component

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/cba529293f.js" crossorigin="anonymous"></script>
 </body>
 </html>
